--- a/free fall ball.vcxproj.filters
+++ b/free fall ball.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Ball.cpp">
+    <ClCompile Include="Ball.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
